--- a/devcontainer/app/cli-info.template
+++ b/devcontainer/app/cli-info.template
@@ -5,5 +5,5 @@ PORT: $MYSQL_PORT
 USER: $MYSQL_USER
 PASSWORD: $MYSQL_PWD
 
-PhpMyAdmin GUI URL: http://127.0.0.1:8888/
+PhpMyAdmin GUI URL: http://localhost:8888/
 ###########################################
