--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,11 +1,14 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
     image: sideagroup/web-academy-devcontainer:latest
     volumes:
       - ..:/workspace
+    depends_on:
+      - db
     network_mode: service:db
+    command: sleep infinity
 
   db:
     image: mariadb:10.4
