add npm global deps, aws-cli and publish major version

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   app:
     image: sideagroup/web-academy-devcontainer:latest
     volumes:
+      - ~/.aws/:/home/vscode/.aws/
       - ..:/workspace
     depends_on:
       - db
