--- a/devcontainer/app/cli-info.template
+++ b/devcontainer/app/cli-info.template
@@ -6,4 +6,8 @@ USER: $MYSQL_USER
 PASSWORD: $MYSQL_PWD
 
 PhpMyAdmin GUI URL: http://localhost:8888/
+
+############# EXERCISM SETUP ##############
+exercism configure -t <auth-token from https://exercism.org/settings/api_cli>
+
 ###########################################
