add devcointainer-update as global command

--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -58,10 +58,13 @@ RUN wget --quiet https://github.com/exercism/cli/releases/download/v3.0.13/exerc
     && echo "if [ -f ~/.config/exercism/exercism_completion.bash ]; then source ~/.config/exercism/exercism_completion.bash; fi" >> ~/.bashrc
 
 # setup sidea banner and container info
-COPY ./app/cli-banner ~/.config/sideagroup/cli-banner
+COPY --chown=vscode:vscode ./app/cli-banner /home/vscode/.config/sideagroup/cli-banner
+RUN ls -la && cat ~/.config/sideagroup/cli-banner
 COPY ./app/cli-info.template /tmp
 RUN envsubst < /tmp/cli-info.template >> ~/.config/sideagroup/cli-banner \
     && echo cat ~/.config/sideagroup/cli-banner >> ~/.bashrc
+
+COPY ./app/devcontainer-update.sh /home/vscode/.local/bin/devcontainer-update
 
 # cleanup
 RUN sudo rm -rf /tmp/*
