--- a/devcontainer/app/cli-info.template
+++ b/devcontainer/app/cli-info.template
@@ -11,5 +11,6 @@ PhpMyAdmin GUI URL: http://localhost:8888/
 exercism c -w /workspace/exercism -t <auth-token from https://exercism.org/settings/api_cli>
 
 ########## UPDATING DEVCONTAINER ##########
-devcontainer-update
+1. run `devcontainer-update` in terminal
+2. in vscode `Ctrl + shift + P` and execute command "Remote-Containers: Rebuild Container"
 
