add devcointainer version and add sidea-devcointainer-info command

--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -2,10 +2,14 @@
 ARG PHP_VERSION=8-bullseye
 FROM mcr.microsoft.com/vscode/devcontainers/php:0-${PHP_VERSION}
 
+ARG SIDEA_DEVCONTAINER_VERSION
+
 ARG MYSQL_HOST=db
 ARG MYSQL_PORT=3306
 ARG MYSQL_USER=mariadb
 ARG MYSQL_PWD=mariadb
+
+ENV SIDEA_DEVCONTAINER_VERSION=${SIDEA_DEVCONTAINER_VERSION}
 
 # Install MariaDB client
 RUN apt-get update \
@@ -57,12 +61,12 @@ RUN wget --quiet https://github.com/exercism/cli/releases/download/v3.0.13/exerc
     && mv shell/exercism_completion.bash ~/.config/exercism/exercism_completion.bash \
     && echo "if [ -f ~/.config/exercism/exercism_completion.bash ]; then source ~/.config/exercism/exercism_completion.bash; fi" >> ~/.bashrc
 
-# setup sidea banner and container info
-COPY --chown=vscode:vscode ./app/cli-banner /home/vscode/.config/sideagroup/cli-banner
-RUN ls -la && cat ~/.config/sideagroup/cli-banner
-COPY ./app/cli-info.template /tmp
-RUN envsubst < /tmp/cli-info.template >> ~/.config/sideagroup/cli-banner \
-    && echo cat ~/.config/sideagroup/cli-banner >> ~/.bashrc
+# setup sidea devcontainer info
+# COPY --chown=vscode:vscode ./app/cli-banner /home/vscode/.config/sideagroup/cli-banner
+COPY ./app/sidea-devcontainer-info.template.sh /tmp
+RUN envsubst < /tmp/sidea-devcontainer-info.template.sh >> ~/.local/bin/sidea-devcontainer-info \
+    && chmod +x ~/.local/bin/sidea-devcontainer-info \
+    && echo sidea-devcontainer-info >> ~/.bashrc
 
 COPY ./app/devcontainer-update.sh /home/vscode/.local/bin/devcontainer-update
 
